add deployment descriptor for trust2 and enable test case as well.
details: http://article.gmane.org/gmane.comp.apache.webservices.fx.devel/1129